[TNT-84] feat: 상수 클래스 구현