@@ -1,5 +1,7 @@
 package com.tnt.presentation.member;
 
+import static com.tnt.domain.constant.Constant.TRAINEE;
+import static com.tnt.domain.constant.Constant.TRAINER;
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 import static org.springframework.http.MediaType.IMAGE_JPEG_VALUE;
 import static org.springframework.http.MediaType.MULTIPART_FORM_DATA_VALUE;
@@ -7,7 +9,6 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 import java.time.LocalDate;
-import java.util.Collections;
 import java.util.List;
 
 import org.junit.jupiter.api.DisplayName;
@@ -40,12 +41,12 @@ class MemberControllerTest extends AbstractContainerBaseTest {
 	}
 
 	private SignUpRequest createDefaultSignUpRequest(String memberType) {
-		return new SignUpRequest("fcm-token-test", memberType, "KAKAO", "12345", "test@kakao.com", "홍길동",
-			LocalDate.of(1990, 1, 1), 175.0, 70.0, "테스트 주의사항", List.of("체중 감량", "근력 향상"));
+		return new SignUpRequest("fcm-token-test", memberType, "KAKAO", "12345", "test@kakao.com", true, true, true,
+			true, "홍길동", LocalDate.of(1990, 1, 1), 175.0, 70.0, "테스트 주의사항", List.of("체중 감량", "근력 향상"));
 	}
 
 	private ResultActions performSignUpRequest(SignUpRequest request, MockMultipartFile profileImage) throws Exception {
-		return mockMvc.perform(multipart("/member/sign-up")
+		return mockMvc.perform(multipart("/members/sign-up")
 			.file(new MockMultipartFile("request", "", APPLICATION_JSON_VALUE,
 				objectMapper.writeValueAsString(request).getBytes()))
 			.file(profileImage)
@@ -56,7 +57,7 @@ class MemberControllerTest extends AbstractContainerBaseTest {
 	@DisplayName("통합 테스트 - 트레이너 회원가입 성공")
 	void sign_up_trainer_success() throws Exception {
 		// given
-		SignUpRequest request = createDefaultSignUpRequest("trainer");
+		SignUpRequest request = createDefaultSignUpRequest(TRAINER);
 
 		// when
 		ResultActions result = performSignUpRequest(request, createProfileImage());
@@ -69,27 +70,13 @@ class MemberControllerTest extends AbstractContainerBaseTest {
 	@DisplayName("통합 테스트 - 트레이니 회원가입 성공")
 	void sign_up_trainee_success() throws Exception {
 		// given
-		SignUpRequest request = createDefaultSignUpRequest("trainee");
+		SignUpRequest request = createDefaultSignUpRequest(TRAINEE);
 
 		// when
 		ResultActions result = performSignUpRequest(request, createProfileImage());
 
 		// then
 		result.andExpect(status().isOk());
-	}
-
-	@Test
-	@DisplayName("통합 테스트 - 필수 필드 누락으로 회원가입 실패")
-	void sign_up_missing_required_field_fail() throws Exception {
-		// given
-		SignUpRequest request = new SignUpRequest("", "trainer", "KAKAO", "12345", "test@kakao.com", "홍길동",
-			LocalDate.of(1990, 1, 1), 175.0, 70.0, "테스트 주의사항", List.of("체중 감량", "근력 향상"));
-
-		// when
-		ResultActions result = performSignUpRequest(request, createProfileImage());
-
-		// then
-		result.andExpect(status().isBadRequest());
 	}
 
 	@Test
@@ -102,15 +89,15 @@ class MemberControllerTest extends AbstractContainerBaseTest {
 		ResultActions result = performSignUpRequest(request, createProfileImage());
 
 		// then
-		result.andExpect(status().is5xxServerError());
+		result.andExpect(status().is4xxClientError());
 	}
 
 	@Test
-	@DisplayName("통합 테스트 - PT 목적 누락으로 회원가입 실패")
-	void sign_up_empty_goal_contents_fail() throws Exception {
+	@DisplayName("통합 테스트 - 필수 필드 누락으로 회원가입 실패")
+	void sign_up_missing_required_field_fail() throws Exception {
 		// given
-		SignUpRequest request = new SignUpRequest("fcm-token-test", "trainer", "KAKAO", "12345", "test@kakao.com",
-			"홍길동", LocalDate.of(1990, 1, 1), 175.0, 70.0, "테스트 주의사항", Collections.emptyList());
+		SignUpRequest request = new SignUpRequest("", TRAINER, "KAKAO", "12345", "test@kakao.com", null, null, true,
+			true, "홍길동", LocalDate.of(1990, 1, 1), 175.0, 70.0, "테스트 주의사항", List.of("체중 감량", "근력 향상"));
 
 		// when
 		ResultActions result = performSignUpRequest(request, createProfileImage());
